# illegal-toolkit

./: MEMORY.md  README.md  pyproject.toml
illegalkit/: __init__.py  __main__.py  menu.py
illegalkit/tools/: downloader.py
